[gd_scene load_steps=5 format=3 uid="uid://c67j66s6u7qrf"]

[ext_resource type="Theme" uid="uid://bb2trv4dh4mq3" path="res://MainTheme.tres" id="1_eaklx"]
[ext_resource type="Script" path="res://Scripts/GamemodePanel.gd" id="1_mbnqt"]

[sub_resource type="Gradient" id="Gradient_258is"]
colors = PackedColorArray(0.363281, 0.641846, 1, 1, 0.378906, 0.781647, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h6fhv"]
gradient = SubResource("Gradient_258is")
fill_from = Vector2(1, 1)

[node name="GamemodePanel" type="PanelContainer"]
offset_right = 518.0
offset_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_eaklx")
script = ExtResource("1_mbnqt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 54
text = "Word Match"

[node name="HighScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "High Score: 1000"
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EasyButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("GradientTexture2D_h6fhv")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/EasyButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MediumButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("GradientTexture2D_h6fhv")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MediumButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Medium"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HardButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("GradientTexture2D_h6fhv")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HardButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hard"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
